--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
     flex-direction: column;
     align-items: center;
 
-    
     background-color: #0ea5e9;
     padding: 12px;
 }
@@ -28,3 +27,5 @@
     background-color: #fff;
     color: #0ea5e9;
 }
+
+/* MAIN */
