--- a/style.css
+++ b/style.css
@@ -29,3 +29,54 @@
 }
 
 /* MAIN */
+
+.random{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+.ranVerse {
+    font-size: 12px;
+}
+.headingMain{
+    color: black;
+    font-size: 28px;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    
+    margin-top: 40px;
+}
+
+.col{
+    display: flex;
+    gap: 25px;
+}
+.input {
+    border: 1px solid black;
+    border-radius: 6px;
+    min-width: 70%
+}
+.label {
+    min-width: 25%;
+}
+
+.subBtn{
+    border: #0ea5e9 solid 1px;
+    border-radius: 5px;
+    background-color: #fff;
+    padding: 5px;
+    font-size: 13px;
+
+    width: 140px;
+    color: #0ea5e9;
+    cursor: pointer;
+    transition: .5s ease-in;
+}
+.subBtn:hover{
+    background-color: #0ea5e9;
+    color: white;
+}
